fix(style) adjust contrast for citation dark mode

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -194,7 +194,7 @@ ul.menu-list {
     color: #ff8237aa!important;; // I know
   }
 
-  strong, p {
+  strong, p, em {
     color: #aaa!important; // I know
   }
 
